[package]
name = "readcsv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
attohttpc = { version = "0.28.0", default-features = false, features = ["compress", "json", "tls-rustls"] }
anyhow = "1.0.86"
base64 = "0.22.1"
log = "0.4.21"
env_logger = "0.11.3"


finutils = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
ledger = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
zei = { git = "https://github.com/FindoraNetwork/zei.git", branch = "stable-main" }
globutils = { git = "https://github.com/FindoraNetwork/platform-lib-utils", tag = "v1.0.0" }







